# marvelous-databricks-course-victorpion

./: .gitignore  bundle_monitoring.yml  databricks.yml  project_config.yml  pyproject.toml
.github/: CODEOWNERS
notebooks/: preprocess_data.py
scripts/: deploy_model.py  preprocess_data.py  refresh_monitor.py  train_and_register.py
src/fashion/: config.py  data_processor.py  flavor.py  model.py  model_serving.py  monitoring.py  new_flavor.py
